# 4hire

./: 4hire.cabal  Makefile  README.md  stack.yaml  strat.cabal
exec-src/: Main.hs
src/Game/: Lib.hs  Lib4Hire.hs  Mock.hs
src/Game/Lib/: GState.hs  Types.hs  Units.hs
src/Game/Lib/GState/: Battle.hs  MainMenu.hs  Splash.hs
src/Game/Lib/Types/: Building.hs  GState.hs  Team.hs  Terrain.hs  Unit.hs
src/Game/Lib/Units/: Instances.hs
src/Game/Lib4Hire/Types/: GState.hs
src/SDL/: Extras.hs  Run.hs
tests/: Tests.hs
