name:          4hire
category:      Game
version:       0.1.0.0
license:       MIT
cabal-version: >=1.10
license-file:  LICENSE
author:        Joseph Rock
maintainer:    Joseph Rock <wax818@gmail.com>
homepage:      https://github.com/j-rock/4hire
bug-reports:   https://github.com/j-rock/4hire/issues
copyright:     Copyright (C) 2015 Joseph Rock
synopsis:      Strategy game on a hex grid
build-type:    Simple
tested-with:   GHC == 7.10.2
extra-source-files:
  README.md

source-repository head
  type: git
  location: git://github.com/j-rock/4hire.git

executable 4hire-game
  default-language:    Haskell2010
  hs-source-dirs:      exec-src
  main-is:             Main.hs
  build-depends:
    base               >= 4.8   && < 4.9,
    4hire

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:
    base                       >= 4.8 && < 4.9,
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.8 && < 2.9,
    test-framework             >= 0.8 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.4,
    test-framework-quickcheck2 >= 0.3 && < 0.4,
    test-framework-th          >= 0.2 && < 0.3,
    4hire

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:
    base               >= 4.8 && < 4.9,
    sdl2               >= 2.0   && < 2.1,
    linear             >= 1.19  && < 1.20,
    transformers       >= 0.4.2 && < 0.5,
    text               >= 1.2   && < 1.3
  exposed-modules:
    SDL.Extras,
    Game.Lib4Hire,
    Game.Lib4Hire.Types.GState

