name:          strat
category:      Game
version:       0.1.0.0
license:       MIT
cabal-version: >=1.10
license-file:  LICENSE
author:        Joseph Rock
maintainer:    Joseph Rock <wax818@gmail.com>
homepage:      https://github.com/j-rock/strat
bug-reports:   https://github.com/j-rock/strat/issues
copyright:     Copyright (C) 2015 Joseph Rock
synopsis:      Strategy game on a hex grid
build-type:    Simple
tested-with:   GHC == 7.10.2
extra-source-files:
  README.md

source-repository head
  type: git
  location: git://github.com/j-rock/strat.git

executable strat-game
  default-language:    Haskell2010
  hs-source-dirs:      exec-src
  main-is:             Main.hs
  build-depends:
    base               >= 4.8   && < 4.9,
    strat

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  build-depends:
    base                       >= 4.8 && < 4.9,
    HUnit                      >= 1.2 && < 1.3,
    QuickCheck                 >= 2.8 && < 2.9,
    test-framework             >= 0.8 && < 0.9,
    test-framework-hunit       >= 0.3 && < 0.4,
    test-framework-quickcheck2 >= 0.3 && < 0.4,
    test-framework-th          >= 0.2 && < 0.3,
    strat

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:
    base               >= 4.8   && < 4.9,
    bytestring         >= 0.10  && < 0.11,
    lens               >= 4.12  && < 4.13,
    linear             >= 1.19  && < 1.20,
    OpenGL             >= 2.13  && < 2.14,
    sdl2               >= 2.0   && < 2.1,
    text               >= 1.2   && < 1.3,
    transformers       >= 0.4.2 && < 0.5,
    vector             >= 0.10  && < 0.11
  exposed-modules:
    SDL.Run,
    Game.Lib,
      -- Game.Lib.GState,
      --   Game.Lib.GState.Rules,
      -- Game.Lib.Types,
      --   Game.Lib.Types.Building,
      --   Game.Lib.Types.GState,
      --   Game.Lib.Types.Team,
      --   Game.Lib.Types.Terrain,
      --   Game.Lib.Types.Unit,
      -- Game.Lib.Units,
      --   Game.Lib.Units.Instances,
    Game.Mock
